--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -1,4 +1,1 @@
-@import '../../../node_modules/bootstrap/scss/bootstrap.scss';
-body {
-    color: red;
-}
+// @import '../../../node_modules/bootstrap/scss/bootstrap.scss';
