--- a/src/templates/layouts/default.njk
+++ b/src/templates/layouts/default.njk
@@ -2,17 +2,16 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Front-End Library</title>
-  <meta name="format-detection" content="telephone=no" />
-  <meta name="theme-color" content="#000000">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <script src="assets/js/all.js"></script>
+    <meta charset="utf-8">
+    <title>Front-End Boilerplate</title>
+    <meta name="theme-color" content="#000000">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" type="text/css" href="assets/css/all.css" />
+    <script src="assets/js/all.js"></script>
 </head>
 
 <body>
-  {%- block body %}{% endblock -%}
+    {%- block body %}{% endblock -%}
 </body>
 
 </html>
