--- a/src/templates/views/index.njk
+++ b/src/templates/views/index.njk
@@ -1,7 +1,5 @@
 {% extends '../layouts/default.njk' %}
 
 {% block body %}
-<div class="wrapper">
-  test
-</div>
+    <h1>It works!</h1>
 {% endblock %}
